Fixed greebling cutoff at the bottom of itemPicker div

--- a/src/main/webapp/styles/gearPlanner.css
+++ b/src/main/webapp/styles/gearPlanner.css
@@ -208,7 +208,7 @@ body.faction-mode-pub .faction-imp
 #itemPicker
 {
     margin-top:-30px;
-    padding:67px 30px 60px 0px;
+    padding:67px 30px 75px 0px;
 
     width:100%;
 
